2005-01-19  Bruno Haible  <bruno@clisp.org>

	* strings.tst: Clean up after test added on 2001-12-04.

2005-01-18  Bruno Haible  <bruno@clisp.org>

	* bind.tst: Fix a test and add some more tests.

2005-01-13  Sam Steingold  <sds@gnu.org>

	* tests.lisp (with-ignored-errors): use princ-error
	use newline convention B consistently

2005-01-13  Sam Steingold  <sds@gnu.org>

	* tests.lisp (princ-error): moved here from...
	* conditions.tst: here
	* bind.tst: use it instead of print-cond

2005-01-13  Sam Steingold  <sds@gnu.org>

	allow compilation instead/in addition to evaluation of test forms
	* tests.lisp (*eval-method*, *test-ignore-errors*): new variables
	(my-eval): new function
	(do-test, do-errcheck): not accept accept optional parameters, use
	*TEST-IGNORE-ERRORS* instead; use MY-EVAL instead of EVAL
	(*run-test-ignore-errors*) : removed
	(run-test, run-some-tests, run-all-tests): accept keyword instead
	of optional parameters

2005-01-13  Sam Steingold  <sds@gnu.org>

	* bind.tst: new file: test non-global special bindings

2005-01-05  Bruno Haible  <bruno@clisp.org>

	* macro8.tst: Add tests for global symbol-macros.

2004-12-24  Bruno Haible  <bruno@clisp.org>

	* streams.tst: Adjust a test, taking into account that WARN now
	prints an elastic newline after and none before the warning.

2004-12-24  Bruno Haible  <bruno@clisp.org>

	* format.tst: Add some tests for elastic-newline.

2005-01-04  Sam Steingold  <sds@gnu.org>

	* type.tst: check that there are no unnecessary warnings on
	predicate-accessor conflict

2004-12-24  Bruno Haible  <bruno@clisp.org>

	* ffi.tst: Add a few tests for conversion of strings and arrays with
	element-type CHARACTER.

2004-12-19  Bruno Haible  <bruno@clisp.org>

	* setf.tst: Add test against broken PUSH implementation.

2004-12-19  Bruno Haible  <bruno@clisp.org>

	* setf.tst: Add some tests for the quality of some macroexpansions.

2004-12-19  Bruno Haible  <bruno@clisp.org>
